--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.adaptworks</groupId>
-	<artifactId>awsite</artifactId>
+	<artifactId>practices</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>awsite Maven Webapp</name>
+	<name>practices Maven Webapp</name>
 
 	<dependencies>
 		<dependency>
@@ -83,39 +83,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>opensymphony</groupId>
-			<artifactId>sitemesh</artifactId>
-			<version>2.4.2</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>net.vidageek</groupId>
-			<artifactId>i18n</artifactId>
-			<version>0.5-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
 			<groupId>net.sourceforge.htmlunit</groupId>
 			<artifactId>webdriver</artifactId>
 			<version>2.6</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.thoughtworks.xstream</groupId>
-			<artifactId>xstream</artifactId>
-			<version>1.3.1</version>
-		</dependency>
-		
-		 <dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-email</artifactId>
-			<version>1.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.1</version>
 		</dependency>
 		
 		<dependency>
@@ -125,15 +95,15 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>awsite</finalName>
+		<finalName>practices</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.18</version>
 				<configuration>
-					<webApp>${basedir}/target/awsite.war</webApp>
-					<contextPath>/awsite</contextPath>
+					<webApp>${basedir}/target/practices.war</webApp>
+					<contextPath>/practices</contextPath>
 					<stopPort>9966</stopPort>
 					<stopKey>foo</stopKey>
 					<systemProperties>
